# arcore-ml-sample

app/: build.gradle
app/src/main/assets/: china-unit-int8.param  shelf_320_int8.param
app/src/main/assets/shaders/: box.frag  box.vert
app/src/main/java/com/google/ar/core/examples/java/ml/: ARCoreSessionLifecycle.kt  AppRenderer.kt  MainActivity.kt  MainActivityView.kt
app/src/main/java/com/google/ar/core/examples/java/ml/classification/: DetectedObjectResult.kt  GoogleCloudVisionDetector.kt  MLKitObjectDetector.kt  ObjectDetector.kt  YoloV5Ncnn.java
app/src/main/java/com/google/ar/core/examples/java/ml/render/: BoxRender.kt  LabelRender.kt  PointCloudRender.kt  TextTextureCache.kt
app/src/main/jni/: BYTETracker.cpp  BYTETracker.h  CMakeLists.txt  STrack.cpp  STrack.h  logutils.h  m.id.h  model.id.h  model.mem.h  ndkcamera.cpp  ndkcamera.h  yolov5ncnn_jni.cpp  yolov8.cpp  yolov8.h
app/src/main/jni/ncnnvulkan/arm64-v8a/include/ncnn/: platform.h
app/src/main/jni/ncnnvulkan/arm64-v8a/lib/pkgconfig/: ncnn.pc
app/src/main/jni/ncnnvulkan/armeabi-v7a/include/ncnn/: platform.h
app/src/main/jni/ncnnvulkan/armeabi-v7a/lib/cmake/ncnn/: ncnn.cmake
app/src/main/res/drawable/: round_corner.xml
app/src/main/res/layout/: activity_main.xml
